# SCCs-MPI-OMP-Parallelization

./: .gitignore  CMakeLists.txt  Pipfile  README.md
include/: DebugPrintUtils.h  GraphGenerator.h  Kosaraju.h  TArray.h  TGraph.h  THTAuxiliaryGraph.h  THTAuxiliarySCC.h  THTSCCs.h  TInfoHTAuxiliary.h  TInfoHTAuxiliaryGraph.h  TInfoHTSCCs.h  TInfoInt.h  TStack.h  Tarjan.h  TestUtil.h  Utils.h
measurements made/cluster measures/kosaraju/measure_O0/DIM_1000_LB_0_HB_250/: DIM_1000_LB_0_HB_250_MPI_00_OMP_00.csv  DIM_1000_LB_0_HB_250_MPI_01_OMP_01.csv  DIM_1000_LB_0_HB_250_MPI_01_OMP_02.csv  DIM_1000_LB_0_HB_250_MPI_01_OMP_04.csv  DIM_1000_LB_0_HB_250_MPI_01_OMP_08.csv  DIM_1000_LB_0_HB_250_MPI_02_OMP_01.csv  DIM_1000_LB_0_HB_250_MPI_02_OMP_02.csv  DIM_1000_LB_0_HB_250_MPI_02_OMP_04.csv  DIM_1000_LB_0_HB_250_MPI_02_OMP_08.csv  DIM_1000_LB_0_HB_250_MPI_04_OMP_01.csv  DIM_1000_LB_0_HB_250_MPI_04_OMP_02.csv  DIM_1000_LB_0_HB_250_MPI_04_OMP_04.csv  DIM_1000_LB_0_HB_250_MPI_04_OMP_08.csv  psize-1000-LB-table.csv
measurements made/cluster measures/kosaraju/measure_O0/DIM_1000_LB_250_HB_500/: DIM_1000_LB_250_HB_500_MPI_00_OMP_00.csv  DIM_1000_LB_250_HB_500_MPI_01_OMP_01.csv  DIM_1000_LB_250_HB_500_MPI_01_OMP_02.csv  DIM_1000_LB_250_HB_500_MPI_01_OMP_04.csv  DIM_1000_LB_250_HB_500_MPI_01_OMP_08.csv  DIM_1000_LB_250_HB_500_MPI_02_OMP_01.csv  DIM_1000_LB_250_HB_500_MPI_02_OMP_02.csv  DIM_1000_LB_250_HB_500_MPI_02_OMP_04.csv  DIM_1000_LB_250_HB_500_MPI_02_OMP_08.csv  DIM_1000_LB_250_HB_500_MPI_04_OMP_01.csv  DIM_1000_LB_250_HB_500_MPI_04_OMP_02.csv  DIM_1000_LB_250_HB_500_MPI_04_OMP_04.csv  DIM_1000_LB_250_HB_500_MPI_04_OMP_08.csv  psize-1000-LB-table.csv
measurements made/cluster measures/kosaraju/measure_O0/DIM_1000_LB_500_HB_750/: DIM_1000_LB_500_HB_750_MPI_00_OMP_00.csv  DIM_1000_LB_500_HB_750_MPI_01_OMP_01.csv  DIM_1000_LB_500_HB_750_MPI_01_OMP_02.csv  DIM_1000_LB_500_HB_750_MPI_01_OMP_04.csv  DIM_1000_LB_500_HB_750_MPI_01_OMP_08.csv  DIM_1000_LB_500_HB_750_MPI_02_OMP_01.csv  DIM_1000_LB_500_HB_750_MPI_02_OMP_02.csv  DIM_1000_LB_500_HB_750_MPI_02_OMP_04.csv  DIM_1000_LB_500_HB_750_MPI_02_OMP_08.csv  DIM_1000_LB_500_HB_750_MPI_04_OMP_01.csv  DIM_1000_LB_500_HB_750_MPI_04_OMP_02.csv  DIM_1000_LB_500_HB_750_MPI_04_OMP_04.csv  DIM_1000_LB_500_HB_750_MPI_04_OMP_08.csv  psize-1000-LB-table.csv
measurements made/cluster measures/kosaraju/measure_O0/DIM_100_LB_0_HB_25/: DIM_100_LB_0_HB_25_MPI_00_OMP_00.csv  DIM_100_LB_0_HB_25_MPI_01_OMP_01.csv  DIM_100_LB_0_HB_25_MPI_01_OMP_02.csv  DIM_100_LB_0_HB_25_MPI_01_OMP_04.csv  DIM_100_LB_0_HB_25_MPI_01_OMP_08.csv  DIM_100_LB_0_HB_25_MPI_02_OMP_01.csv  DIM_100_LB_0_HB_25_MPI_02_OMP_02.csv  DIM_100_LB_0_HB_25_MPI_02_OMP_04.csv  DIM_100_LB_0_HB_25_MPI_02_OMP_08.csv  DIM_100_LB_0_HB_25_MPI_04_OMP_01.csv  DIM_100_LB_0_HB_25_MPI_04_OMP_02.csv  DIM_100_LB_0_HB_25_MPI_04_OMP_04.csv  DIM_100_LB_0_HB_25_MPI_04_OMP_08.csv  psize-100-LB-table.csv
measurements made/cluster measures/kosaraju/measure_O0/DIM_100_LB_25_HB_50/: DIM_100_LB_25_HB_50_MPI_00_OMP_00.csv  DIM_100_LB_25_HB_50_MPI_01_OMP_01.csv  DIM_100_LB_25_HB_50_MPI_01_OMP_02.csv  DIM_100_LB_25_HB_50_MPI_01_OMP_04.csv  DIM_100_LB_25_HB_50_MPI_01_OMP_08.csv  DIM_100_LB_25_HB_50_MPI_02_OMP_01.csv  DIM_100_LB_25_HB_50_MPI_02_OMP_02.csv  DIM_100_LB_25_HB_50_MPI_02_OMP_04.csv  DIM_100_LB_25_HB_50_MPI_02_OMP_08.csv  DIM_100_LB_25_HB_50_MPI_04_OMP_01.csv  DIM_100_LB_25_HB_50_MPI_04_OMP_02.csv  DIM_100_LB_25_HB_50_MPI_04_OMP_04.csv  DIM_100_LB_25_HB_50_MPI_04_OMP_08.csv  psize-100-LB-table.csv
measurements made/cluster measures/kosaraju/measure_O0/DIM_100_LB_50_HB_75/: DIM_100_LB_50_HB_75_MPI_00_OMP_00.csv  DIM_100_LB_50_HB_75_MPI_01_OMP_01.csv  DIM_100_LB_50_HB_75_MPI_01_OMP_02.csv  DIM_100_LB_50_HB_75_MPI_01_OMP_04.csv  DIM_100_LB_50_HB_75_MPI_01_OMP_08.csv  DIM_100_LB_50_HB_75_MPI_02_OMP_01.csv  DIM_100_LB_50_HB_75_MPI_02_OMP_02.csv  DIM_100_LB_50_HB_75_MPI_02_OMP_04.csv  DIM_100_LB_50_HB_75_MPI_02_OMP_08.csv  DIM_100_LB_50_HB_75_MPI_04_OMP_01.csv  DIM_100_LB_50_HB_75_MPI_04_OMP_02.csv  DIM_100_LB_50_HB_75_MPI_04_OMP_04.csv  DIM_100_LB_50_HB_75_MPI_04_OMP_08.csv  psize-100-LB-table.csv
measurements made/cluster measures/kosaraju/measure_O0/DIM_2500_LB_0_HB_625/: DIM_2500_LB_0_HB_625_MPI_00_OMP_00.csv  DIM_2500_LB_0_HB_625_MPI_01_OMP_01.csv  DIM_2500_LB_0_HB_625_MPI_01_OMP_02.csv  DIM_2500_LB_0_HB_625_MPI_01_OMP_04.csv  DIM_2500_LB_0_HB_625_MPI_01_OMP_08.csv  DIM_2500_LB_0_HB_625_MPI_02_OMP_01.csv  DIM_2500_LB_0_HB_625_MPI_02_OMP_02.csv  DIM_2500_LB_0_HB_625_MPI_02_OMP_04.csv  DIM_2500_LB_0_HB_625_MPI_02_OMP_08.csv  DIM_2500_LB_0_HB_625_MPI_04_OMP_01.csv  DIM_2500_LB_0_HB_625_MPI_04_OMP_02.csv  DIM_2500_LB_0_HB_625_MPI_04_OMP_04.csv  DIM_2500_LB_0_HB_625_MPI_04_OMP_08.csv  psize-2500-LB-table.csv
measurements made/cluster measures/kosaraju/measure_O0/DIM_2500_LB_1350_HB_1875/: DIM_2500_LB_1350_HB_1875_MPI_00_OMP_00.csv  DIM_2500_LB_1350_HB_1875_MPI_01_OMP_01.csv  DIM_2500_LB_1350_HB_1875_MPI_01_OMP_02.csv  DIM_2500_LB_1350_HB_1875_MPI_01_OMP_04.csv  DIM_2500_LB_1350_HB_1875_MPI_01_OMP_08.csv  DIM_2500_LB_1350_HB_1875_MPI_02_OMP_01.csv  DIM_2500_LB_1350_HB_1875_MPI_02_OMP_02.csv  DIM_2500_LB_1350_HB_1875_MPI_02_OMP_04.csv  DIM_2500_LB_1350_HB_1875_MPI_02_OMP_08.csv  DIM_2500_LB_1350_HB_1875_MPI_04_OMP_01.csv  DIM_2500_LB_1350_HB_1875_MPI_04_OMP_02.csv  DIM_2500_LB_1350_HB_1875_MPI_04_OMP_04.csv  DIM_2500_LB_1350_HB_1875_MPI_04_OMP_08.csv  psize-2500-LB-table.csv
measurements made/cluster measures/kosaraju/measure_O0/DIM_2500_LB_625_HB_1350/: DIM_2500_LB_625_HB_1350_MPI_00_OMP_00.csv  DIM_2500_LB_625_HB_1350_MPI_01_OMP_01.csv  DIM_2500_LB_625_HB_1350_MPI_01_OMP_02.csv  DIM_2500_LB_625_HB_1350_MPI_01_OMP_04.csv  (+10 more)
measures/: extractKosaraju.py  extractTarjan.py  measures.bash
src/: DebugPrintUtils.c  GraphGenerator.c  Kosaraju.c  TArray.c  TGraph.c  THTAuxiliaryGraph.c  THTAuxiliarySCC.c  THTSCCs.c  TInfoHTAuxiliary.c  TInfoHTAuxiliaryGraph.c  TInfoHTSCCs.c  TInfoInt.c  TStack.c  Tarjan.c  TestUtil.c  Utils.c  main.c
test/: TestCase1.c  TestCase2.c  TestCase3.c  TestCase4.c  TestCase5.c  TestCase6.c
(+4034 files in other folders)
